--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@
   }
 
   h1 {
-    font-size: 100%;
+    font-size: 200%;
     color: #730E15;
     line-height: 1.5em;
   }
@@ -50,9 +50,7 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Welcome to America! When are you leaving?</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
